--- a/data/rules.yml
+++ b/data/rules.yml
@@ -16,7 +16,7 @@ rules:
       - intent: nlu_fallback
       - action: utter_please_rephrase
 
-  - rule: out-of-scope
+  - rule: out-of-scope dialogs
     steps:
       - intent: out_of_scope
       - action: utter_out_of_scope
