--- a/tests/test_stories.yml
+++ b/tests/test_stories.yml
@@ -2,86 +2,86 @@
 #### If you want to learn more, please see the docs: https://rasa.com/docs/rasa/testing-your-assistant
 
 stories:
-  - story: happy path 1
-    steps:
-      - user: |
-          hello there!
-        intent: greet
-      - action: utter_greet
-      - user: |
-          amazing
-        intent: mood_great
-      - action: utter_happy
+  # - story: happy path 1
+  #   steps:
+  #     - user: |
+  #         hello there!
+  #       intent: greet
+  #     - action: utter_greet
+  #     - user: |
+  #         amazing
+  #       intent: mood_great
+  #     - action: utter_happy
 
-  - story: happy path 2
-    steps:
-      - user: |
-          hello there!
-        intent: greet
-      - action: utter_greet
-      - user: |
-          amazing
-        intent: mood_great
-      - action: utter_happy
-      - user: |
-          bye-bye!
-        intent: goodbye
-      - action: utter_goodbye
+  # - story: happy path 2
+  #   steps:
+  #     - user: |
+  #         hello there!
+  #       intent: greet
+  #     - action: utter_greet
+  #     - user: |
+  #         amazing
+  #       intent: mood_great
+  #     - action: utter_happy
+  #     - user: |
+  #         bye-bye!
+  #       intent: goodbye
+  #     - action: utter_goodbye
 
-  - story: sad path 1
-    steps:
-      - user: |
-          hello
-        intent: greet
-      - action: utter_greet
-      - user: |
-          not good
-        intent: mood_unhappy
-      - action: utter_cheer_up
-      - action: utter_did_that_help
-      - user: |
-          yes
-        intent: affirm
-      - action: utter_happy
+  # - story: sad path 1
+  #   steps:
+  #     - user: |
+  #         hello
+  #       intent: greet
+  #     - action: utter_greet
+  #     - user: |
+  #         not good
+  #       intent: mood_unhappy
+  #     - action: utter_cheer_up
+  #     - action: utter_did_that_help
+  #     - user: |
+  #         yes
+  #       intent: affirm
+  #     - action: utter_happy
 
-  - story: sad path 2
-    steps:
-      - user: |
-          hello
-        intent: greet
-      - action: utter_greet
-      - user: |
-          not good
-        intent: mood_unhappy
-      - action: utter_cheer_up
-      - action: utter_did_that_help
-      - user: |
-          not really
-        intent: deny
-      - action: utter_goodbye
+  # - story: sad path 2
+  #   steps:
+  #     - user: |
+  #         hello
+  #       intent: greet
+  #     - action: utter_greet
+  #     - user: |
+  #         not good
+  #       intent: mood_unhappy
+  #     - action: utter_cheer_up
+  #     - action: utter_did_that_help
+  #     - user: |
+  #         not really
+  #       intent: deny
+  #     - action: utter_goodbye
 
-  - story: sad path 3
-    steps:
-      - user: |
-          hi
-        intent: greet
-      - action: utter_greet
-      - user: |
-          very terrible
-        intent: mood_unhappy
-      - action: utter_cheer_up
-      - action: utter_did_that_help
-      - user: |
-          no
-        intent: deny
-      - action: utter_goodbye
+  # - story: sad path 3
+  #   steps:
+  #     - user: |
+  #         hi
+  #       intent: greet
+  #     - action: utter_greet
+  #     - user: |
+  #         very terrible
+  #       intent: mood_unhappy
+  #     - action: utter_cheer_up
+  #     - action: utter_did_that_help
+  #     - user: |
+  #         no
+  #       intent: deny
+  #     - action: utter_goodbye
 
-  - story: say goodbye
-    steps:
-      - user: |
-          bye-bye!
-        intent: goodbye
-      - action: utter_goodbye
+  # - story: say goodbye
+  #   steps:
+  #     - user: |
+  #         bye-bye!
+  #       intent: goodbye
+  #     - action: utter_goodbye
 
   - story: bot challenge
     steps:
@@ -89,16 +89,24 @@ stories:
           are you a bot?
         intent: bot_challenge
       - action: utter_iamabot
-# - story: user get weather
-#   steps:
-#   - user: |
-#       what is the weather in Recife?
-#     intent: get_weather
-#   - action: action_check_weather_entities
-#   - action: utter_ask_when_info
-#   - user: |
-#       i want to know the weather next year
-#   - action: utter_ask_time_info
-#   - user: |
-#       tell me of the Afternoon
-#   - action: utter_slots_weather_values
+
+- story: user get weather
+  steps:
+  - user: |
+      what is the weather in Recife?
+    intent: get_weather
+  - action: action_check_weather_entities
+  - action: utter_ask_when_info
+  - user: |
+      i want to know the weather next year
+  - action: utter_ask_time_info
+  - user: |
+      tell me of the Afternoon
+  - action: utter_slots_weather_values
+
+  - story: user message out of scope
+    steps:
+      - user: |
+          I really love you, dude
+        intent: out-of-scope
+      - action: utter_please_rephrase
