--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -128,37 +128,77 @@ nlu:
       - give me weather
       - Help me please, what's the weather?
       - I want to know the weather
+      - - What are the weather conditions going to be like in Manhasset
+      - What's the weather in [Timbo](GPE)?
+      - will the weather be warm far from Niger at 15 o'clock
+      - Tell me if it will be hot on June the 10th in San de Fuca, Sweden
+      - Will it be chilly at 4:20 pm in Druid Hills AMerican Samoa?
+      - Weather for [09/03/2021](DATE) at [Brasília](GPE)
+      - Weather for june ninth, 2033 in San Pierre Romania
+      - Find the weather prediction for Dubai on tuesday on 10 pm
+      - weather forcast for current location [now](DATE)
+      - What's the weather this month in [Mozambique](GPE)
+      - What will the weather be this month in Wesley Hills?
+      - How chilly will it get here? 
+      - What's the weather looking like right now in Croatia?
+      - What will the weather be in Federated States Of Micronesia at 00:17 am
       - Hi, my name is João, in [Rio de Janeiro](GPE), what is the weather at [10:12 pm](DATE), [now](TIME)?
       - Today I will make a trip, so I want to know what is the temperature in [Alaska](GPE), [tomorrow](DATE) at [10 am](TIME) 
-      - What is the weather like in [Recife](GPE) in [the morning](TIME) [next year](DATE)?
-      - What is the weather like in [Camaragibe](GPE) in [the morning](TIME) [next week](DATE)?
-      - What is the weather like in [Natal](GPE) in [the morning](TIME), [tomorrow](DATE)?
+      - What is the feels like in [Recife](GPE) in [the morning](TIME) [next year](DATE)?
+      - Will it be colder in San Pablo today?
+      - What is the climate like in [Camaragibe](GPE) in [the morning](TIME) [next week](DATE)?
+      - What is the temperature like in [Natal](GPE) in [the morning](TIME), [tomorrow](DATE)?
       - weather like in [João Pessoa](GPE), in [the afternoon](TIME), [next year](DATE)?
       - What is the weather like in [Acre](GPE) in [the afternoon](TIME) [next week](DATE)?
+      -  Is it going to be cold [today](DATE) in [Venezuela](GPE)?
+      - Tell me the predicted weather once I travel faraway to Chapada Diamantina
       - What is the climate in [São Paulo](GPE) in [the afternoon](TIME) [tomorrow](DATE)?
       - What is the weather in [Brasília](GPE), at [night](TIME), [next year](DATE)?
       - weather in [Olinda](GPE) at [night](TIME) [next week](DATE)?
+      - Check the weather for Eagle Harbor
       - What is the weather in [Itamaracá](GPE) at [night](TIME) [tomorrow](DATE)?
       - What is the weather like in [Recife](GPE) at [10:00 am](TIME) [tomorrow](DATE)?
+      - Forecase for [Ohio](GPE) 
       - What is the weather in [Mato Grosso](GPE) at [22:15 pm](TIME) am [next week](DATE)?
+      - What is the weather like in Colorado?
       - tell me the weather in [Recife](GPE)
+      - What is the weather looking like in Russia on february 18th?
+      - Will it be warm in Guinea-Bissau
+      - Ho warm is it in [Angola](GPE)?
+      - I need the weather in Hubbardston, will it be chillier?
+      - Will it be sunny in [Spain](GPE) on [02/06/2023](DATE)?
       - tell me, what is the climate in [Recife](GPE) this [night](TIME)
       - Gives me the feel of [Recife](GPE)
-      - I need to know some weather info [tomorrow](DATE) [night](TIME)
+      - Would you give me the weather forecast in India?
+      - Tell me if will there a snowstorm in Clifton Forge
+      - I need to know some forecasting info [tomorrow](DATE) [night](TIME)
       - Please, weather information at [12:00](TIME)
       - What's the weather like [next year](DATE)?
       - I have a question about the climate in [Canadá](GPE)
       - What is the temperature in [Cuba](GPE)?
       - About [México](GPE), what is the climate?
+      - Will there be a blizzard at a [4:00 AM](TIME) in [Sky Valley](GPE)
+      - How is faraway temperature at 02:45 am in Brumley?
+      - Weather for [January 7th](DATE) in [North Carolina](GPE), [12 PM](TIME)
       - What's the weather [tomorrow](DATE) [night](TIME)?
-      - what is the weather in [Recife](GPE) at [night](TIME)?
+      - what is the forecast in [Recife](GPE) at [night](TIME)?
       - What is the weather like in [Recife](GPE) in the [afternoon](TIME)?
+      - Can you give me weather details for Alabama, today?
       - Please, give me the feel of [Recife](GPE)
+      - What is the weather like at [Munich](GPE) at [4 pm](TIME)
       - Hi, my name is João, in [Curitiba](GPE), what is the weather at [10:12 pm](TIME), [tomorrow](DATE)?
       - Hey, I will have a test in [Seabra](GPE), what is the weather at [10:12 pm](TIME) [tomorrow](DATE)?
       - Please, what is the weather like in [Camaragibe](GPE) in [the morning](TIME) [next week](DATE)?
+      - What is the weather for Yemen 
+      - May you give me the weather forecast in Tajikistan?
       - Please, what is the weather at [14:00 am](TIME)
+      - How is the weather in Minnesota?
       - Please, help me, what is the weather in [Curitiba](GPE) at [night](TIME) [today](DATE)?
+      - Will it be warmer in Los Angeles on monday?
+      - Give me a forecast for Carol City
+      - Check the forecast for [Santa Catarina](GPE)
+      - What is the weather forecast for Djibouti
+      - Tell me the weather forecast for Niue
       - Please, help me, what is the weather in [Pernambuco](GPE) at [morning](TIME) [next week](DATE)?
 
   - intent: chatbot_actions
